--- a/.github/pages/_sass/nexus/_layout.scss
+++ b/.github/pages/_sass/nexus/_layout.scss
@@ -16,8 +16,9 @@
 
 img.brand
 {
-    width: 25em;
-    height: 25em;
+    width: 35vh;
+    padding-top: 8vh;
+    padding-bottom: 8vh;
 }
 
 
